# str-cat

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
benches/: benchmark.rs
src/: lib.rs
