[package]
name = "str-cat"
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Efficiently concatenate strings without extra side-effects."
repository = "https://github.com/Equim-chan/str-cat"
documentation = "https://docs.rs/str-cat"
keywords = ["concat", "string", "buffers"]
categories = ["value-formatting"]

[dependencies]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
